--- a/lib/css/style.css
+++ b/lib/css/style.css
@@ -112,3 +112,10 @@ input[type="submit"].btn-warning:hover, input[type="submit"].btn-warning:active,
 }
 .btn-warning:active, .btn-warning.active {
 }
+
+.wpclone_notice {
+    width: 500px;
+    padding: 5px;
+    margin: 25px 0 0 0;
+    border-radius: 5px;
+}
